--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "modernizr": "~2.8.1",
     "mocha": "~2.3.4",
     "angular": "~1.4.8",
-    "angular-route": "~1.4.8"
+    "angular-route": "~1.4.8",
+    "bootstrap-sass": "~>3.3.6"
   },
   "overrides": {
     "bootstrap-sass": {
