--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "mocha": "~2.3.4",
     "angular": "~1.4.8",
     "angular-route": "~1.4.8",
-    "bootstrap-sass": "~>3.3.6"
+    "bootstrap-sass": "~>3.3.6",
+    "firebase": "^2.4.0",
+    "angularfire": "^1.1.3"
   },
   "overrides": {
     "bootstrap-sass": {
