--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "~1.4.8",
     "bootstrap-sass": "~>3.3.6",
     "firebase": "^2.4.0",
-    "angularfire": "^1.1.3"
+    "angularfire": "^1.1.3",
+    "angular-ui-router": "~0.2.17"
   },
   "overrides": {
     "bootstrap-sass": {
