--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "bootstrap-sass": "~>3.3.6",
     "firebase": "^2.4.0",
     "angularfire": "^1.1.3",
-    "angular-ui-router": "~0.2.17"
+    "angular-ui-router": "~0.2.17",
+    "bootstrap-ui-datetime-picker": "^2.2.2",
+    "angular-bootstrap": "^1.2.2"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -41,5 +43,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "resolutions": {
+    "angular-bootstrap": "~1.1.0"
+  }
 }
