Feat: animation with Proton.js
I want to energize the project with background animation. Possibility of
using Proton.js is tested.

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angularfire": "^1.1.3",
     "angular-ui-router": "~0.2.17",
     "bootstrap-ui-datetime-picker": "^2.2.2",
-    "angular-bootstrap": "^1.2.2"
+    "angular-bootstrap": "^1.2.2",
+    "Proton": "proton#*"
   },
   "overrides": {
     "bootstrap-sass": {
